# grok-underrated-recruiter

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  criteria.yaml  discovery_pipeline.ipynb  fly.toml  main.py  pyproject.toml  requirements.txt  seeds.yaml  start.sh  vercel.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.vercel/: project.json
api/: database.py  main.py  models.py  worker.py
data/: recruiter.db
data/enriched/: candidates_deep_eval.json  deep_aksh_555.json  deep_alexzhuang_.json  deep_ani_nlp.json  deep_antheayli.json  deep_awinyimgprocess.json  deep_bahlanuraag.json  deep_billzheng155508.json  deep_ckaplanis1.json  deep_einsums.json  deep_emrecanacikgoz.json  deep_fjord41.json  deep_gabriberton.json  deep_gu_xiangming.json  deep_hmellor_.json  deep_iamgrigorev.json  deep_itfische.json  deep_j_m_sommer.json  deep_jaewon_chung_cs.json  deep_juleszqiu.json  deep_junfanzhu98.json  deep_junlinwang3.json  deep_kauterry.json  deep_liaozeyi.json  deep_lightetal.json  deep_lindon_gao.json  deep_manasisharma_.json  deep_matricesai.json  deep_mihiranand.json  deep_nifleisch.json  deep_pariljain.json  deep_rhubarbwu.json  deep_romeovdean.json  deep_romilifshitz.json  deep_saberatalukder.json  deep_sbhaiwala03.json  (+13 more)
scripts/: import_graph_data.py  migrate_to_supabase.py
src/: __init__.py  deep_evaluator.py  evaluator.py  graph_builder.py  grok_client.py  ranking.py  run_discovery.py  x_client.py
ui/: .env.example  .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml
(+1294 files in other folders)
