[project]
name = "xai-hack"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "xai-sdk>=1.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
